[gd_scene load_steps=4 format=3 uid="uid://qusgup62nlgv"]

[ext_resource type="FontFile" uid="uid://bfqjdaot25jm4" path="res://UI/PixeloidSans-mLxMm.ttf" id="1_bf274"]
[ext_resource type="Script" path="res://Menus/loss_win_menu.gd" id="2_cwh27"]

[sub_resource type="Theme" id="Theme_nudw5"]
default_font = ExtResource("1_bf274")
default_font_size = 18

[node name="Loss_win_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nudw5")
script = ExtResource("2_cwh27")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -23.0
offset_right = 4.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You lost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TryAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Try Again"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
